[workspace]
members = ["accel", "ambient", "blinky", "display", "ambient-display"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
hal = { package = "esp32c3-hal", version = "0.8.0" }
esp-backtrace = { version = "0.6.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.4.0", features = ["esp32c3"] }
